feat: improve prediction
